# deblob

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.server  README.md  deblob.example.toml  joint-research-jr-compute-optim-202313.md  joint-research-jr-deblob-ai-compute-202202.md  joint-research-jr-deblob-finalboss-210956.md  joint-research-jr-deblob-sources-202058.md  joint-research-jr-schema-naming-211140.md
crates/deblob/: Cargo.toml
crates/deblob-bench/: Cargo.toml
crates/deblob-bench/src/: config.rs  fields.rs  generator.rs  header.rs  histogram.rs  lib.rs  main.rs  malform.rs  measurer.rs  outcome.rs  padding.rs  prober.rs  producer.rs  record.rs  report.rs  scenarios.rs  schema.rs
crates/deblob-bench/src/fixtures/: mod.rs
crates/deblob-bench/src/fixtures/data/: cloudevent_order_created.json  cloudevent_sensor_reading.json  cloudevent_user_signup.json  github_issues.json  github_pull_request.json  github_push.json  k8s_event_image_pull_backoff.json  k8s_event_node_not_ready.json  k8s_event_pod_scheduled.json
crates/deblob-bench/tests/: determinism.rs  knobs.rs  measurer_it.rs  parser_validation.rs
crates/deblob-core/: Cargo.toml
crates/deblob-core/src/: envelope.rs  error.rs  id.rs  lib.rs  ports.rs  revision.rs  semantic.rs
crates/deblob-eval/: Cargo.toml
crates/deblob-eval/corpus/: 01_known_exact_basic.json  02_known_exact_order_permutation_a.json  03_known_exact_order_permutation_b.json  04_drift_gold_rank2.json  05_drift_gold_rank3.json  06_drift_renamed_fields_snake_camel.json  07_drift_vendor_prefix_fields.json  08_drift_added_optional_field.json  09_drift_nullability_widening.json  10_drift_new_wrapper_object.json  11_drift_multiple_historical_versions.json  12_drift_plausible_wrong_high_freq_family.json  13_incompatible_identical_structure_diff_meaning.json  14_incompatible_same_names_diff_units_ids.json  15_incompatible_near_neighbor_one_discriminator.json  16_new_family_basic.json  17_new_family_semantic.json  18_new_family_with_close_distractor.json  19_ambiguous_reused_generic_names.json  20_ambiguous_all_null.json  21_ambiguous_empty_object.json  22_ambiguous_map_vs_record.json  23_ambiguous_field_injection.json  24_ambiguous_long_name_homoglyph.json  25_ambiguous_gold_absent_candidate_missing.json
crates/deblob-eval/src/: corpus.rs  lib.rs  main.rs  metrics.rs  report.rs
crates/deblob-eval/src/generate/: families.rs  fields.rs  mod.rs  variants.rs
crates/deblob-eval/tests/: eval_it.rs
crates/deblob-experiment/: Cargo.toml
crates/deblob-experiment/src/: labels.rs  lib.rs  main.rs  reporter.rs  run.rs
crates/deblob-experiment/src/arms/: deterministic.rs  gate.rs  mock.rs  mod.rs  semantic.rs
crates/deblob-experiment/src/continual/: datasets.rs  metrics.rs  mod.rs  prequential.rs
crates/deblob-experiment/src/continual/prequential/: tests.rs
crates/deblob-experiment/src/continual/training_job/: fake_backend.rs  hf_jobs.rs  mod.rs  modal.rs  tests.rs
crates/deblob-experiment/src/continual/training_job/modal/: tests.rs
crates/deblob-experiment/src/corpus/: github_archive.rs  mod.rs  pairs.rs  tiers.rs  wikimedia.rs
crates/deblob-experiment/src/metrics/: l1_retrieval.rs  l2_raw.rs  l3_gate.rs  l4_utility.rs  mod.rs  stats.rs
crates/deblob-experiment/tests/: adapter_seam_it.rs  continual_prequential_it.rs
crates/deblob-experiment/tests/fixtures/: github_archive_sample.json  wikimedia_sample.json
crates/deblob-fingerprint/fuzz/: .gitignore  Cargo.toml
crates/deblob-fingerprint/fuzz/corpus/parse_fuzz/: bad_unicode_escape.json  depth_bomb_40.json  huge_string.json  key_over_length.json  number_precision.json  object_10k_keys.json  oversize_small.json  valid_mixed.json  valid_number_exp.json  valid_unicode_escapes.json
crates/deblob-fingerprint/fuzz/fuzz_targets/: parse_fuzz.rs
crates/deblob-http/: Cargo.toml
crates/deblob-http/src/: auth.rs  headers.rs  kafka_sink.rs  lib.rs  limits.rs  proxy.rs
crates/deblob-http/tests/: proxy_it.rs
crates/deblob-kafka/: Cargo.toml
crates/deblob-kafka/src/: discovery_producer.rs  headers.rs  lib.rs  relay.rs  stream.rs
crates/deblob-kafka/tests/: chaos_it.rs  relay_it.rs
crates/deblob-match/: Cargo.toml
crates/deblob-match/src/: discovery.rs  lib.rs  matcher.rs  metrics.rs
crates/deblob-redis/: Cargo.toml
crates/deblob-redis/src/: evidence.rs  feedback_store.rs  health.rs  index.rs  lib.rs  lua.rs  registry.rs  samples.rs  semantic.rs  source_registry.rs  umbrella.rs  value_profile.rs
crates/deblob-redis/tests/: evidence_it.rs  feedback_store_it.rs  health_it.rs  index_it.rs  registry_it.rs  semantic_it.rs
crates/deblob-semantic/: Cargo.toml
crates/deblob-semantic/src/: canon.rs  digest.rs  domain.rs  lib.rs  path.rs  signature.rs  vocab.rs
crates/deblob-semantic/tests/: digest_it.rs  signature_it.rs
crates/deblob-slm/: Cargo.toml
crates/deblob-slm/src/: cache.rs  contract.rs  feedback.rs  http.rs  lib.rs  prompt.rs  runtime.rs
crates/deblob-slm/src/adapters/: cactus.rs  llama_cpp.rs  mod.rs  ollama.rs
crates/deblob-slm/tests/: adapters_it.rs  http_it.rs
crates/deblob-umbrella/: Cargo.toml
crates/deblob-umbrella/src/: adjudicate.rs  executor.rs  lib.rs  path.rs  store.rs  types.rs  units.rs  verify.rs
crates/deblob/src/: auto_promote.rs  coldlane.rs  config.rs  discovery_consumer.rs  feedback.rs  lib.rs  main.rs  matcher.rs  metrics.rs  model_registry.rs  policy.rs  promote.rs  retrain.rs  retrieval.rs  sample_capture.rs  semantic_drift.rs  semantic_neighbors.rs  semantic_store.rs  serve.rs  shadow.rs  trusted.rs  umbrella_controller.rs  umbrella_guard.rs  value_profile.rs
crates/deblob/src/api/: auth.rs  candidates.rs  mod.rs  naming.rs  schemas.rs  semantic.rs  sources.rs  stream.rs  umbrellas.rs
crates/deblob/tests/: api_it.rs  e2e_it.rs  model_registry_it.rs  promote_resolve_it.rs  semantic_capstone_it.rs  semantic_drift_all_versions_it.rs  semantic_drift_it.rs  semantic_drift_monoid_promoted_it.rs  semantic_monoid_promoted_it.rs  semantic_neighbors_it.rs  shadow_redis_it.rs  trusted_apply_it.rs
docs/: deblob-report.html  (+23 more)
(+151 files in other folders)
