[workspace]
resolver = "2"
members = [
    "crates/deblob",
    "crates/deblob-core",
    "crates/deblob-fingerprint",
    "crates/deblob-monoid",
    "crates/deblob-redis",
]
exclude = ["crates/deblob-fingerprint/fuzz"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.80"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["arbitrary_precision"] }
thiserror = "2"
sha2 = "0.10"
data-encoding = "2"
uuid = { version = "1", features = ["v7", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
proptest = "1"
async-trait = "0.1"
bytes = "1"
