[package]
name = "deblob-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Seeded synthetic + real-world JSON stream generation for the Deblob k3s benchmark (additive, no product changes)."

[dependencies]
serde_json.workspace = true
rand = "0.8"
rand_chacha = "0.3"

[dev-dependencies]
deblob-core = { path = "../deblob-core" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
