[package]
name = "deblob-experiment"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "deblob-experiment"
path = "src/main.rs"

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob = { path = "../deblob" }
deblob-eval = { path = "../deblob-eval" }
deblob-slm = { path = "../deblob-slm" }
deblob-monoid = { path = "../deblob-monoid" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sha2.workspace = true
uuid.workspace = true
rand = "0.8"
rand_chacha = "0.3"
futures-executor = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
