[package]
name = "deblob-experiment"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "deblob-experiment"
path = "src/main.rs"

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob = { path = "../deblob" }
deblob-eval = { path = "../deblob-eval" }
deblob-redis = { path = "../deblob-redis" }
deblob-slm = { path = "../deblob-slm" }
deblob-monoid = { path = "../deblob-monoid" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
sha2.workspace = true
uuid.workspace = true
rand = "0.8"
rand_chacha = "0.3"
futures-executor = "0.3"
tokio = { workspace = true, features = ["process"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
wiremock = "0.6"
testcontainers-modules = { version = "0.11", features = ["redis"] }
static_assertions = "1.1"
