[package]
name = "deblob-http"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
deblob-match = { path = "../deblob-match" }
axum = "0.8"
tower = "0.5"
hyper = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { workspace = true, features = ["net"] }
tokio-util = "0.7"
http = "1"
bytes.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
url = "2"
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
