[package]
name = "deblob-redis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "script"] }
sha2.workspace = true
data-encoding.workspace = true

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["redis"] }
