[package]
name = "deblob-redis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
# P2-D Task 10: `crate::semantic::append_revision`/`rebuild_semantic_index`
# compute a schema's signature (`deblob_semantic::signature::
# semantic_signature`) purely to derive the bounded inverted-index posting
# keys (`deblob:sem-sig:<feature_hex>`) — never to recompute `canonical`/
# `sem_` bytes, which stay the caller's job. This is a deliberate, narrow
# exception to this crate's prior "storage only, never canonicalization"
# posture (see `crate::semantic`'s module docs) so the postings swap can be
# computed once, in Rust, and passed into the SAME atomic Lua transition
# that moves the active pointer — never recomputed inside Lua itself.
deblob-semantic = { path = "../deblob-semantic" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "script", "connection-manager"] }
sha2.workspace = true
data-encoding.workspace = true

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["redis"] }
