[package]
name = "deblob-redis"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob-umbrella = { path = "../deblob-umbrella" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
# P2-D Task 10: `crate::semantic::append_revision`/`rebuild_semantic_index`
# compute a schema's signature (`deblob_semantic::signature::
# semantic_signature`) purely to derive the bounded inverted-index posting
# keys (`deblob:sem-sig:<feature_hex>`) — never to recompute `canonical`/
# `sem_` bytes, which stay the caller's job. This is a deliberate, narrow
# exception to this crate's prior "storage only, never canonicalization"
# posture (see `crate::semantic`'s module docs) so the postings swap can be
# computed once, in Rust, and passed into the SAME atomic Lua transition
# that moves the active pointer — never recomputed inside Lua itself.
deblob-semantic = { path = "../deblob-semantic" }
# SLM continual-learning loop (spec:
# docs/superpowers/specs/2026-07-16-slm-continual-learning.md §2):
# `crate::feedback_store::RedisFeedbackStore` stores/exports
# `deblob_slm::feedback::TrainingExample` and renders its JSONL export via
# the SAME PII-safe `deblob_slm::build_prompt` the shadow lane uses. This is
# a leaf dependency direction (`deblob-slm` depends on `deblob-core` only,
# never on `deblob-redis`), so it introduces no cycle with `deblob` (which
# depends on both `deblob-redis` and `deblob-slm` already).
deblob-slm = { path = "../deblob-slm" }
# Redis write paths increment `deblob_redis_write_refusals_total{operation}`
# on a `noeviction`/`maxmemory` OOM refusal — see `crate::registry::
# note_write_refusal`. `deblob-match` owns the process-wide `Metrics` surface
# and depends only on `deblob-core`/`deblob-fingerprint` (never on this
# crate), so this introduces no dependency cycle.
deblob-match = { path = "../deblob-match" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
redis = { version = "0.27", features = ["tokio-comp", "script", "connection-manager"] }
sha2.workspace = true
data-encoding.workspace = true

[dev-dependencies]
testcontainers-modules = { version = "0.11", features = ["redis"] }
