[package]
name = "deblob-semantic"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
thiserror.workspace = true
sha2.workspace = true
unicode-normalization.workspace = true
serde_json.workspace = true

[dev-dependencies]
deblob-fingerprint = { path = "../deblob-fingerprint" }
deblob-monoid = { path = "../deblob-monoid" }
