[package]
name = "deblob"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
deblob-monoid = { path = "../deblob-monoid" }
deblob-redis = { path = "../deblob-redis" }
tokio.workspace = true
async-trait.workspace = true
sha2.workspace = true
data-encoding.workspace = true
bytes.workspace = true
lru = "0.12"
parking_lot = "0.12"
axum = "0.8"
tower = "0.5"
serde.workspace = true
serde_json.workspace = true
subtle = "2"
base64 = "0.22"
governor = "0.6"
prometheus = "0.13"
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
redis = { version = "0.27", features = ["tokio-comp", "script"] }
testcontainers-modules = { version = "0.11", features = ["redis"] }
