[package]
name = "deblob"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
deblob-core = { path = "../deblob-core" }
deblob-dlp = { path = "../deblob-dlp" }
# SLM continual-learning loop (spec:
# docs/superpowers/specs/2026-07-16-slm-continual-learning.md §3): the
# retrain orchestrator evaluates a candidate model against a held-out
# corpus via `deblob_eval::{run_eval, compute_metrics}` and exports the
# synthetic corpus's train slice via `deblob_eval::render_finetune_jsonl`.
# `deblob-eval` depends only on deblob-core/-fingerprint/-monoid/-slm — not
# on `deblob` — so this introduces no cycle.
deblob-eval = { path = "../deblob-eval" }
deblob-fingerprint = { path = "../deblob-fingerprint" }
deblob-http = { path = "../deblob-http" }
deblob-kafka = { path = "../deblob-kafka" }
deblob-match = { path = "../deblob-match" }
deblob-monoid = { path = "../deblob-monoid" }
deblob-redis = { path = "../deblob-redis" }
deblob-semantic = { path = "../deblob-semantic" }
deblob-slm = { path = "../deblob-slm" }
deblob-umbrella = { path = "../deblob-umbrella" }
rdkafka = { version = "0.37", features = ["cmake-build", "tokio", "ssl"] }
unicode-normalization = "0.1"
tokio = { workspace = true, features = ["net", "process", "io-util"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait.workspace = true
sha2.workspace = true
data-encoding.workspace = true
uuid.workspace = true
bytes.workspace = true
axum = "0.8"
tower = "0.5"
serde.workspace = true
serde_json.workspace = true
subtle = "2"
base64 = "0.22"
governor = "0.6"
prometheus = "0.13"
tracing.workspace = true
thiserror.workspace = true
clap = { version = "4", features = ["derive"] }
toml = "0.8"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
url = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
testcontainers-modules = { version = "0.11", features = ["redis", "kafka"] }
